[tool.poetry]
name = "pygame-rhythm-game"
version = "0.1.0"
description = "Rhythm game using Pygame."
authors = ["ram <ramzey.burdette2005@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pygame = "2.6.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.12.0"
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
